# Cochlear_Q1

./: .gitignore  CMakeLists.txt  Makefile  Makefile.am  README.md
UnitTests/: Makefile  Makefile.am  configure.ac  test_rewards.c
docs/: Design.pptx  Requirements.docx
src/: CMakeLists.txt  logger.c  main.c  menu.c  menu.h  rewards.c  rewards.h
